--- a/src/css/NavH.css
+++ b/src/css/NavH.css
@@ -21,9 +21,6 @@
 }
 .navH {
     min-width: 100%;
+}
 
-}
-h3{
-    font-size: ;
-}
 }
